--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "ququzone <xueping.yang@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "prettier": "^2.3.1",
-    "prettier-plugin-solidity": "^1.0.0-beta.13"
+    "prettier": "^2.8.8",
+    "prettier-plugin-solidity": "^1.1.3"
   },
   "scripts": {
     "lint": "prettier --write **.sol"
