--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,8 @@
 src = 'src'
 out = 'out'
 libs = ['lib']
+bytecode_hash = "none"
+optimizer_runs = 1000000
 
-# See more config options https://github.com/foundry-rs/foundry/tree/master/config
+[profile.intense.fuzz]
+runs = 10000
